SF Primes/src/objects/Recap_WebID__c.object
<CustomObject>
    <description>WebIDs associated w/ specific recap</description>
    <fields>
        <fullName>Migration_ID__c</fullName>
        <externalId>true</externalId>
        <label>Migration_ID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <label>WebID Product</label>
        <picklist>
            <picklistValues>
                <fullName>Website</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DAP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PowerSearch</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Search Essentials</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PowerBrand</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PowerSEO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reputation Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Social Media</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Owner Marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DAP eMail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BMW CPO</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Recap_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Recap Product</label>
        <referenceTo>Recap_Product__c</referenceTo>
        <relationshipLabel>Recap WebIDs</relationshipLabel>
        <relationshipName>Recap_WebIDs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Recap__c</fullName>
        <label>Recap</label>
        <referenceTo>Recap__c</referenceTo>
        <relationshipLabel>Recap WebIDs</relationshipLabel>
        <relationshipName>Recap_WebIDs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>WebID_Text__c</fullName>
        <label>WebID (Text)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WebID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>WebID</label>
        <referenceTo>WebID__c</referenceTo>
        <relationshipLabel>Recap WebIDs</relationshipLabel>
        <relationshipName>Recap_WebIDs</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Recap WebID</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Recap__c</columns>
        <columns>Product__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>RW-{00000}</displayFormat>
        <label>Recap WebIDs Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Recap WebIDs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>CB_Recap_WebID_WebID_orWebIDText_blank</fullName>
        <active>true</active>
        <errorConditionFormula>(ISBLANK(WebID__c))  

&amp;&amp;

(ISBLANK(WebID_Text__c ))</errorConditionFormula>
        <errorMessage>Please fill in a value in either the WebID or the WebID(Text) field.</errorMessage>
    </validationRules>
</CustomObject>